--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": " ./node_modules/mocha/bin/mocha test",
-    "start": "node index.js'"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,8 @@
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-protractor": "^2.3.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
     "webpack-stream": "^3.2.0"
   }
 }
