--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.4",
-    "webpack-stream": "^3.2.0"
+    "express": "^4.13.4"
   },
   "devDependencies": {
     "angular": "^1.5.5",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.0.7",
+    "gulp-protractor": "^2.4.0",
+    "webpack-stream": "^3.2.0"
   }
 }
