--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "gulp"
   },
   "author": "",
   "license": "MIT",
@@ -15,7 +15,6 @@
   "devDependencies": {
     "angular": "^1.5.5",
     "gulp": "^3.9.1",
-    "gulp-nodemon": "^2.0.7",
     "gulp-protractor": "^2.4.0",
     "webpack-stream": "^3.2.0"
   }
